--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 		<!-- Header -->
 			<section id="header">
 				<header class="major">
-					<h1>Highlights</h1>
-					<p>A fun little { responsive } single pager by <a href="http://html5up.net">HTML5 UP</a></p>
+					<h1>Lucie Correia</h1>
+					<p> 3rd year PhD student at Strasbourg Astronomical Observatory</p>
 				</header>
 				<div class="container">
 					<ul class="actions special">
