--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 				<header class="major">
 					<h1>Lucie Correia</h1>
 					<p> 3rd year PhD student at Strasbourg Astronomical Observatory</p>
+					<p> My research focuses on analizing millimeter to centimeter dust emission</p>
 				</header>
 				<div class="container">
 					<ul class="actions special">
@@ -32,9 +33,10 @@
 					<span class="image fit primary"><img src="images/pic01.jpg" alt="" /></span>
 					<div class="content">
 						<header class="major">
-							<h2>Who I am</h2>
+							<h2>Who I am </h2>
 						</header>
-						<p>Aliquam ante ac id. Adipiscing interdum lorem praesent fusce pellentesque arcu feugiat. Consequat sed ultricies rutrum. Sed adipiscing eu amet interdum lorem blandit vis ac commodo aliquet integer vulputate phasellus lorem ipsum dolor lorem magna consequat sed etiam adipiscing interdum.</p>
+						<p> I am currently a 3rd-year PhD student at the Strasbourg Astronomical Observatory, working with Dr. Caroline Bot.
+							I did a Bachelor in Physics, specialized in research, and a Master in Astrophysics at the University Toulouse III (Paul Sabatier), France. I had the opportunity to work on modeling gas and dust emission in nearby galaxies during my end-of-study internship, and I pursued during my PhD thesis. </p>
 					</div>
 					<a href="#two" class="goto-next scrolly">Next</a>
 				</div>
@@ -46,26 +48,11 @@
 					<span class="image fit primary"><img src="images/pic02.jpg" alt="" /></span>
 					<div class="content">
 						<header class="major">
-							<h2>Stuff I do</h2>
+							<h2> Research </h2>
 						</header>
-						<p>Consequat sed ultricies rutrum. Sed adipiscing eu amet interdum lorem blandit vis ac commodo aliquet vulputate.</p>
-						<ul class="icons-grid">
-							<li>
-								<span class="icon solid major fa-camera-retro"></span>
-								<h3>Magna Etiam</h3>
-							</li>
-							<li>
-								<span class="icon solid major fa-pencil-alt"></span>
-								<h3>Lorem Ipsum</h3>
-							</li>
-							<li>
-								<span class="icon solid major fa-code"></span>
-								<h3>Nulla Tempus</h3>
-							</li>
-							<li>
-								<span class="icon solid major fa-coffee"></span>
-								<h3>Sed Feugiat</h3>
-							</li>
+						<p> Compared to the well-studied infrared and radio domains, galaxy emission in the millimeter to centimeter wavelength range has been less extensively observed. In this range, the galaxy emission consists of several elements: the thermal emission from dust grains, the free-free emission from the HII regions, and in the radio, the synchrotron emission. Dust emission is often modeled as a modified black body, however dust emissivity in the (sub)-mm may be flatter than assumed, since there may be a number of wavelength breaks (the sub-mm excess, and further out in wavelengths the mm excess), and variations in the shape and intensity related to environmental conditions. Additionally, anomalous microwave emission (AME), another potential contributor in the mm to cm range, has been detected in our galaxy for several decades. The prevailing theory attributes AME to rapidly rotating dust grains, however it remains largely undetected in external galaxies. Our objective is to accurately characterize the spectral energy distribution (SED) of galaxy emission across the mm-cm range..</p>
+ 						<ul class="icons-grid">
+							
 						</ul>
 					</div>
 					<a href="#three" class="goto-next scrolly">Next</a>
@@ -78,9 +65,9 @@
 					<span class="image fit primary"><img src="images/pic03.jpg" alt="" /></span>
 					<div class="content">
 						<header class="major">
-							<h2>One more thing</h2>
+							<h2>Articles</h2>
 						</header>
-						<p>Aliquam ante ac id. Adipiscing interdum lorem praesent fusce pellentesque arcu feugiat. Consequat sed ultricies rutrum. Sed adipiscing eu amet interdum lorem blandit vis ac commodo aliquet integer vulputate phasellus lorem ipsum dolor lorem magna consequat sed etiam adipiscing interdum.</p>
+						<p> url: https://ui.adsabs.harvard.edu/search/fq=%7B!type%3Daqp%20v%3D%24fq_database%7D&fq_database=(database%3Aastronomy%20OR%20database%3Aphysics)&q=%20%20author%3A%22%5ECorreia%2C%20L.%22&sort=date%20desc%2C%20bibcode%20desc&p_=0</p>
 					</div>
 					<a href="#footer" class="goto-next scrolly">Next</a>
 				</div>
