--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
 						<header class="major">
 							<h2> Research </h2>
 						</header>
-						<p> Compared to the well-studied infrared and radio domains, galaxy emission in the millimeter to centimeter wavelength range has been less extensively observed. </p>
-						<p> In this range, the galaxy emission consists of several elements: the thermal emission from dust grains, the free-free emission from the HII regions, and in the radio, the synchrotron emission. </p>
-						<p> Dust emission is often modeled as a modified black body, however dust emissivity in the (sub)-mm may be flatter than assumed, since there may be a number of wavelength breaks (the sub-mm excess, and further out in wavelengths the mm excess), and variations in the shape and intensity related to environmental conditions. </p>
-						<p> Additionally, anomalous microwave emission (AME), another potential contributor in the mm to cm range, has been detected in our galaxy for several decades. The prevailing theory attributes AME to rapidly rotating dust grains, however it remains largely undetected in external galaxies. </p> 
-						<p> Our objective is to accurately characterize the spectral energy distribution (SED) of galaxy emission across the mm-cm range. </p>
+						<p> Compared to the well-studied infrared and radio domains, galaxy emission in the millimeter to centimeter wavelength range has been less extensively observed. <p>
+						<p> In this range, the galaxy emission consists of several elements: the thermal emission from dust grains, the free-free emission from the HII regions, and in the radio, the synchrotron emission. <p>
+						<p> Dust emission is often modeled as a modified black body, however dust emissivity in the (sub)-mm may be flatter than assumed, since there may be a number of wavelength breaks (the sub-mm excess, and further out in wavelengths the mm excess), and variations in the shape and intensity related to environmental conditions. <p>
+						<p> Additionally, anomalous microwave emission (AME), another potential contributor in the mm to cm range, has been detected in our galaxy for several decades. The prevailing theory attributes AME to rapidly rotating dust grains, however it remains largely undetected in external galaxies. <p> 
+						<p> Our objective is to accurately characterize the spectral energy distribution (SED) of galaxy emission across the mm-cm range. <p>
  						<ul class="icons-grid">
 							
 						</ul>
