--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 						<header class="major">
 							<h2>Articles</h2>
 						</header>
-						<p> url: https://ui.adsabs.harvard.edu/search/fq=%7B!type%3Daqp%20v%3D%24fq_database%7D&fq_database=(database%3Aastronomy%20OR%20database%3Aphysics)&q=%20%20author%3A%22%5ECorreia%2C%20L.%22&sort=date%20desc%2C%20bibcode%20desc&p_=0</p>
+						 <a href="https://ui.adsabs.harvard.edu/search/fq=%7B!type%3Daqp%20v%3D%24fq_database%7D&fq_database=(database%3Aastronomy%20OR%20database%3Aphysics)&q=%20%20author%3A%22%5ECorreia%2C%20L.%22&sort=date%20desc%2C%20bibcode%20desc&p_=0"> </a> </p>
 					</div>
 					<a href="#footer" class="goto-next scrolly">Next</a>
 				</div>
