--- a/index.html
+++ b/index.html
@@ -79,6 +79,23 @@
 			</section>
 
 		<!-- Four -->
+
+			<section id="four" class="main special">
+				<div class="container">
+					<span class="image fit primary"><img src="images/pic03.jpg" alt="" /></span>
+					<div class="content">
+						<header class="major">
+							<h2>Get in touch</h2>
+						</header>
+						<form method="post" action="#">
+						<ul class="icons">
+						<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
+						</ul>
+						<ul class="copyright">
+							<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Demo Images: <a href="http://unsplash.com">Unsplash</a></li>
+						</ul>
+					</footer>
+				</section>
 		<!--
 			<section id="four" class="main">
 				<div class="container">
